# mingyue-pm

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  index.html  mingyue-pm-index.html  pyproject.toml  部署指南.md
app/: __init__.py  database.py  main.py  models.py  schemas.py  seed.py
app/routers/: projects.py  reports.py  tasks.py
app/static/: app.js  gantt.js  table.js
app/templates/: base.html  index.html  report_full.html
docker/: Dockerfile
docs/superpowers/plans/: 2026-04-14-mingyue-pm-fastapi-refactor.md
docs/superpowers/specs/: 2026-04-14-mingyue-pm-fastapi-refactor-design.md
tests/: conftest.py  test_projects.py  test_reports.py  test_tasks.py
