[tool.poetry]
name = "mingyue-pm"
version = "0.1.0"
description = "明月工作台 — 项目管理系统"
authors = ["edy"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111"
uvicorn = {extras = ["standard"], version = "^0.29"}
sqlalchemy = "^2.0"
jinja2 = "^3.1"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
httpx = "^0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
